--- a/index.html
+++ b/index.html
@@ -3079,7 +3079,7 @@ advantage of Petri net reductions with an SMT-based model checker.</p>
 <li><a href="https://doi.org/10.5281/zenodo.7341426" target="_blank" rel="noopener">Artifact for FM 2023 Paper&quot;</a><br>
 <em>SMPT: A Testbed for Reachability Methods in Generalized Petri Nets</em></li>
 <li><a href="https://doi.org/10.5281/zenodo.8349546" target="_blank" rel="noopener">Artifact for my PhD thesis</a><br>
-A polyhedral framework for reachability problems in Petri nets</li>
+<em>A polyhedral framework for reachability problems in Petri nets</em></li>
 <li><a href="https://doi.org/10.5281/zenodo.10061156" target="_blank" rel="noopener">Artifact for VMCAI 2024 Paper</a><br>
 <em>Project and Conquer: Fast Quantifier Elimination for Checking Petri Net Reachability</em></li>
 </ul>
