--- a/index.html
+++ b/index.html
@@ -4083,7 +4083,7 @@ advantage of Petri net reductions with an SMT-based model checker.</p>
               <span>Toulouse and Grenoble, FRANCE</span>
             
           </div>
-          <div class="card-text">I started developing SMPT, a model-checker for access problems in Petri nets. I proposed a first combination of polyhedral reductions with SMT-based methods and I was particularly interested in the problem of concurrent places.</div>
+          <div class="card-text">I started developing SMPT, a model-checker for reachability problems in Petri nets. I proposed a first combination of polyhedral reductions with SMT-based methods and I was particularly interested in the concurrent places problem.</div>
         </div>
       </div>
     </div>
