--- a/index.html
+++ b/index.html
@@ -3076,7 +3076,7 @@ advantage of Petri net reductions with an SMT-based model checker.</p>
 <ul>
 <li><a href="https://doi.org/10.5281/zenodo.5863379" target="_blank" rel="noopener">Artifact for TACAS 2022 Paper</a><br>
 <em>Property Directed Reachability for Generalized Petri Nets</em></li>
-<li><a href="https://doi.org/10.5281/zenodo.7341426" target="_blank" rel="noopener">Artifact for FM 2023 Paper&quot;</a><br>
+<li><a href="https://doi.org/10.5281/zenodo.7341426" target="_blank" rel="noopener">Artifact for FM 2023 Paper</a><br>
 <em>SMPT: A Testbed for Reachability Methods in Generalized Petri Nets</em></li>
 <li><a href="https://doi.org/10.5281/zenodo.8349546" target="_blank" rel="noopener">Artifact for my PhD thesis</a><br>
 <em>A polyhedral framework for reachability problems in Petri nets</em></li>
