--- a/index.html
+++ b/index.html
@@ -3189,7 +3189,7 @@ advantage of Petri net reductions with an SMT-based model checker.</p>
 
 <div class="col-12 col-lg-8">
 
-  <p><strong>Benchmarks suites</strong></p>
+  <p><strong>Benchmark suites</strong></p>
 <ul>
 <li><a href="https://mcc.lip6.fr/2023/pdf/CryptoMiner-form.pdf" target="_blank" rel="noopener">Model entitled &ldquo;CryptoMiner&rdquo;</a><br>
 <em>Proposed for the Model Checking Contest 2023</em></li>
